--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HBS</title>
+    <title>Bhutto International</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <style>
         :root {
@@ -34,7 +34,7 @@
         <header class="gradient-bg text-white py-16 px-4">
             <div class="max-w-4xl mx-auto text-center">
                 <h1 class="text-4xl md:text-5xl font-extrabold mb-4 tracking-tight">
-                    HBS International 
+                    HBS Bhutto International 
                 </h1>
                 <p class="text-xl md:text-2xl opacity-90 font-light">
                    Overseas Employment Promoters
